Added sampling from bigram dataset to generate poor new names

--- a/LanguageModel.ipynb
+++ b/LanguageModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4062460e-a7b6-4baf-8e75-ac985888c8e5",
    "metadata": {},
    "outputs": [
@@ -22,10 +22,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d9b0d545-c815-430c-ad31-21d6ad1d1292",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emma',\n",
+       " 'olivia',\n",
+       " 'ava',\n",
+       " 'isabella',\n",
+       " 'sophia',\n",
+       " 'charlotte',\n",
+       " 'mia',\n",
+       " 'amelia',\n",
+       " 'harper',\n",
+       " 'evelyn']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "words = open('names.txt', 'r').read().splitlines() # Load names into array of strings\n",
     "words[:10]"
@@ -33,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6ada45cf-d239-407f-94c3-95b9f1c482cf",
    "metadata": {},
    "outputs": [
@@ -158,6 +178,7 @@
     "\n",
     "stoi = {s:i+1 for i, s in enumerate(chars)} # Map characters to indices for 2d array storage\n",
     "stoi['.'] = 0 # Special Character for start or end of word\n",
+    "itos = {i:s for s, i in stoi.items()} # Map indicies\n",
     "\n",
     "for w in words: # Iterate over all words\n",
     "    chs = ['.'] + list(w) + ['.'] # Adds special token/character to word to analyze which letters are more likely to start and end a word\n",
@@ -169,8 +190,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d0e74150-c098-4d6f-b819-49e8739f2962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sampling from bigram table\n",
+    "\n",
+    "p = N[0].float()\n",
+    "p = p / p.sum() # Contains probability distrobution (Where first character is the start character (second character is the first character of the word)\n",
+    "# Sample using Pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d006b453-1615-4805-a753-f0001951117a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cexze.\n",
+      "momasurailezitynn.\n",
+      "konimittain.\n",
+      "llayn.\n",
+      "ka.\n",
+      "da.\n",
+      "staiyaubrtthrigotai.\n",
+      "moliellavo.\n",
+      "ke.\n",
+      "teda.\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    out = []\n",
+    "    idx = 0\n",
+    "    while True:\n",
+    "        p = N[idx].float()\n",
+    "        p = p / p.sum()\n",
+    "        idx = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
+    "        out.append(itos[idx])\n",
+    "        if idx == 0:\n",
+    "            break\n",
+    "    print(''.join(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b891cedb-f056-41cb-a51c-e9bc9efb5bbd",
    "metadata": {},
    "outputs": [],
    "source": []
